--- a/views/fruits/new.slim
+++ b/views/fruits/new.slim
@@ -1,6 +1,6 @@
 h2 Add a fruit to the Database
 
-form action="/newfruit" method="post"
+form action="/fruits/new" method="post"
     input name="name" placeholder="Banana" type="text"
     br
     input name="amount" placeholder="5" type="number"
