--- a/views/fruits/index.slim
+++ b/views/fruits/index.slim
@@ -1,6 +1,7 @@
-form action="/fruits/new" method="get"
-    input type="submit" value="Add a fruit"
-br
+- if session[:admin]
+    form action="/fruits/new" method="get"
+        input type="submit" value="Add a fruit"
+    br
 
 form action="/fruits" method="get"
     input name="q" placeholder="Search for fruits" type="text"
@@ -16,9 +17,13 @@ form action="/fruits" method="get"
     h2 Fruits In Database:
 
     - @fruits.each do |fruit|
-        h2
-            a href="/fruits/#{fruit["id"]}/edit" style="color:black" #{fruit["name"]}
+        - if session[:admin]
+            h2
+                a href="/fruits/#{fruit["id"]}/edit" style="color:black" #{fruit["name"]}
+        - else
+            h2 #{fruit["name"]}
         p There are #{fruit["amount"]} of these
-        form action="/fruits/#{fruit["id"]}/delete" method="post"
-            input type="submit" value="Delete this fruit"
+        - if session[:admin]
+            form action="/fruits/#{fruit["id"]}/delete" method="post"
+                input type="submit" value="Delete this fruit"
         hr
